Update text on bounding box format

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -104,7 +104,7 @@
     "## Step 3: Visualize model response\n",
     "The model returns JSON containing a predictions field which is an array of JSON objects, one for each face detected in the image. For each face, the bounding box coordinates are contained in the `detection_box` field, while the age estimated results are contained in the `age_estimation` field.\n",
     "\n",
-    "The bounding box coordinates are given in the format [xmin, ymin, width, height], i.e., height for y and width for x. \n",
+    "The bounding box coordinates are given in the format `[ymin, xmin, ymax, xmax]`, where each coordinate is _normalized_ by the appropriate image dimension (height for `y` or width for `x`). Each coordinate is therefore in the range `[0, 1]`. In order to use these coordinates to display the bounding boxes, we must first map them back to the same range as the original image, so that they become pixel coordinates.\n",
     "We use these pixel coordinates to overlay the bounding boxes on the original image."
    ]
   },
